@@ -2,6 +2,10 @@
 // This file is part of the "Irrlicht Engine".
 // For conditions of distribution and use, see copyright notice in irrlicht.h
 
+#include "IrrCompileConfig.h"
+
+#ifdef _IRR_COMPILE_WITH_BSP_LOADER_
+
 #include "CQuake3ShaderSceneNode.h"
 #include "IVideoDriver.h"
 #include "ICameraSceneNode.h"
@@ -41,12 +45,6 @@ CQuake3ShaderSceneNode::CQuake3ShaderSceneNode(
 	setAutomaticCulling ( scene::EAC_BOX );
 }
 
-
-/*
-*/
-CQuake3ShaderSceneNode::~CQuake3ShaderSceneNode ()
-{
-}
 
 /*
 	create single copies
@@ -790,4 +788,6 @@ video::SMaterial& CQuake3ShaderSceneNode::getMaterial(u32 i)
 
 } // end namespace scene
 } // end namespace irr
+
+#endif
 
